--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@netlify-builder/deploy:deploy",
+          "options": {
+            "outputPath": "dist/sandbox",
+            "netlifyToken": "Mohammed-MBN",
+            "siteId": "rami-pointer"
+          }
         }
       }
     }
