--- a/angular.json
+++ b/angular.json
@@ -105,7 +105,7 @@
           "options": {
             "outputPath": "dist/sandbox",
             "netlifyToken": "Mohammed-MBN",
-            "siteId": "rami-pointer"
+            "siteId": "store-mbn"
           }
         }
       }
